--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compiler"
   ],
   "author": "Amos Aidoo",
-  "license": "",
+  "license": "MIT License",
   "dependencies": {
     "request": "^2.88.0"
   }
