--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sphngine-node-client",
+  "name": "sphere-engine-node-client",
   "version": "1.0.0",
   "description": "A client library for the sphere engine api",
   "main": "index.js",
